--- a/Odin-script/Lesson010/style.css
+++ b/Odin-script/Lesson010/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    box-sizing: border-box;
 }
 
 .container {
@@ -9,14 +9,18 @@
     max-width: 500px;
     margin: auto;
 }
+.container > h1 {
 
+    font-weight: 400;
+}
 input {
 
     border-radius: 5px;
     width: 100%;
-    height: 30px;
+    height: 50px;
     padding: 10px;
     border: 1px solid black;
+    outline: none !important ;
 }
 p {
 
@@ -24,15 +28,29 @@ p {
     text-align: left;
 }
 input::placeholder {
+
     font-size: 2em;
     padding: 10px;
 
 }
 .valid {
 
-    border: 2px solid green;
+    border: 2px solid #36cc36;
 }
 .invalid {
 
-    border: 2px solid red;
+    border: 2px solid orangered;
+}
+
+input + p {
+
+    color: rgba(255, 68, 0, 0.705);
+    opacity: 0;
+    height: 0;
+}
+
+input.invalid + p {
+
+    opacity: 1;
+    height: max-content;
 }
